kubernetes/namespaces/default/pastebin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastebin
spec:
  selector:
    matchLabels:
      app: pastebin
  template:
    metadata:
      labels:
        app: pastebin
    spec:
      containers:
        - image: wantguns/bin 
          imagePullPolicy: IfNotPresent
          name: pastebin
          ports:
            - containerPort: 6162
              name: pastebin
          volumeMounts:
            - name: pastebin-storage
              mountPath: /upload
      volumes:
        - name: pastebin-storage
          persistentVolumeClaim:
            claimName: pastebin-storage
