kubernetes/namespaces/default/pastebin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pastebin
  annotations:
    prometheus.io/probe: 'true'
spec:
  selector:
    app: pastebin
  ports:
  - name: pastebin
    port: 80
    targetPort: pastebin
