kubernetes/namespaces/default/pastebin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastebin
spec:
  ingressClassName: nginx
  rules:
  - host: paste.hyperserver.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pastebin
              port:
                number: 80
  - host: paste.hyprr.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pastebin
              port:
                number: 80
